--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-/Resources
+
+Resources/
+/Dev/**/*.gba
+/Dev/**/*.elf
+*.log
+*.cache
+**/.vs/
