--- a/Dev/katas/Premake_DKP/Premake_DKP/Premake_DKP.vcxproj
+++ b/Dev/katas/Premake_DKP/Premake_DKP/Premake_DKP.vcxproj
@@ -20,23 +20,23 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{AB128EFD-3525-41B5-A09A-14DDFD40EF95}</ProjectGuid>
-    <RootNamespace>DKPKeys</RootNamespace>
+    <ProjectGuid>{0B836A27-3A9C-403C-8C13-A341E80B824E}</ProjectGuid>
+    <RootNamespace>PremakeDKP</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
-    <ConfigurationType>Makefile</ConfigurationType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <ConfigurationType>Makefile</ConfigurationType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -69,24 +69,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>C:\devkitPro\libgba\lib</LibraryPath>
-    <IncludePath>C:\devkitPro\libgba\include;C:\SourceDev\Proj_A113\src\projs\DKP_Keys\DKP_Keys\include;$(IncludePath)</IncludePath>
-    <NMakeBuildCommandLine>make</NMakeBuildCommandLine>
-    <NMakeCleanCommandLine>make clean</NMakeCleanCommandLine>
-    <NMakeOutput>DKP_Keys.gba</NMakeOutput>
-    <NMakeIncludeSearchPath>
-    </NMakeIncludeSearchPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LibraryPath>C:\devkitPro\libgba\lib</LibraryPath>
-    <IncludePath>C:\devkitPro\libgba\include;C:\SourceDev\Proj_A113\src\projs\DKP_Keys\DKP_Keys\include;$(IncludePath)</IncludePath>
-    <NMakeBuildCommandLine>make</NMakeBuildCommandLine>
-    <NMakeCleanCommandLine>make clean</NMakeCleanCommandLine>
-    <NMakeOutput>DKP_Keys.gba</NMakeOutput>
-    <NMakeIncludeSearchPath>
-    </NMakeIncludeSearchPath>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -132,14 +115,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source\gba_pic.c" />
-    <ClCompile Include="source\key_demo.c" />
-    <ClCompile Include="source\toolbox.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\gba_pic.h" />
-    <ClInclude Include="include\input.h" />
-    <ClInclude Include="include\toolbox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
