Create splash screen library under splash_scr in Cust_Menu Remove splash screen members from main c file in Cust_Menu

--- a/Dev/katas/Cust_Menu/Cust_Menu.vcxproj
+++ b/Dev/katas/Cust_Menu/Cust_Menu.vcxproj
@@ -36,7 +36,11 @@
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Cust_Menu\include\splash_scr.h" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="Cust_Menu\source\menu_demo.c" />
+    <ClCompile Include="Cust_Menu\source\splash_scr.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="premake5.lua" />
