Add functional slug creation through CreateSlug() Add randlib.h for random number generation

--- a/Dev/projects/Hangar_Demo/Hangar_Demo.vcxproj
+++ b/Dev/projects/Hangar_Demo/Hangar_Demo.vcxproj
@@ -42,6 +42,7 @@
     <ClInclude Include="Hangar_Demo\build\title_pulse_pcx.h" />
     <ClInclude Include="Hangar_Demo\include\graphics_controller.h" />
     <ClInclude Include="Hangar_Demo\include\input_controller.h" />
+    <ClInclude Include="Hangar_Demo\include\randlib.h" />
     <ClInclude Include="Hangar_Demo\include\splash_scr.h" />
   </ItemGroup>
   <ItemGroup>
