--- a/Dev/projects/Hangar_Demo/Hangar_Demo.vcxproj.filters
+++ b/Dev/projects/Hangar_Demo/Hangar_Demo.vcxproj.filters
@@ -27,13 +27,13 @@
     <ClInclude Include="Hangar_Demo\build\title_pulse_pcx.h">
       <Filter>Hangar_Demo\build</Filter>
     </ClInclude>
+    <ClInclude Include="Hangar_Demo\include\BG_0_GROUND.h">
+      <Filter>Hangar_Demo\include</Filter>
+    </ClInclude>
     <ClInclude Include="Hangar_Demo\include\graphics_controller.h">
       <Filter>Hangar_Demo\include</Filter>
     </ClInclude>
     <ClInclude Include="Hangar_Demo\include\input_controller.h">
-      <Filter>Hangar_Demo\include</Filter>
-    </ClInclude>
-    <ClInclude Include="Hangar_Demo\include\splash_scr.h">
       <Filter>Hangar_Demo\include</Filter>
     </ClInclude>
     <ClInclude Include="Hangar_Demo\include\randlib.h">
@@ -42,24 +42,30 @@
     <ClInclude Include="Hangar_Demo\include\slug.h">
       <Filter>Hangar_Demo\include</Filter>
     </ClInclude>
+    <ClInclude Include="Hangar_Demo\include\splash_scr.h">
+      <Filter>Hangar_Demo\include</Filter>
+    </ClInclude>
     <ClInclude Include="Hangar_Demo\include\tile.h">
       <Filter>Hangar_Demo\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Hangar_Demo\source\BG_0_GROUND.c">
+      <Filter>Hangar_Demo\source</Filter>
+    </ClCompile>
     <ClCompile Include="Hangar_Demo\source\graphics_controller.c">
-      <Filter>Hangar_Demo\source</Filter>
-    </ClCompile>
-    <ClCompile Include="Hangar_Demo\source\input_controller.c">
-      <Filter>Hangar_Demo\source</Filter>
-    </ClCompile>
-    <ClCompile Include="Hangar_Demo\source\splash_scr.c">
       <Filter>Hangar_Demo\source</Filter>
     </ClCompile>
     <ClCompile Include="Hangar_Demo\source\hangar_demo.c">
       <Filter>Hangar_Demo\source</Filter>
     </ClCompile>
+    <ClCompile Include="Hangar_Demo\source\input_controller.c">
+      <Filter>Hangar_Demo\source</Filter>
+    </ClCompile>
     <ClCompile Include="Hangar_Demo\source\slug.c">
+      <Filter>Hangar_Demo\source</Filter>
+    </ClCompile>
+    <ClCompile Include="Hangar_Demo\source\splash_scr.c">
       <Filter>Hangar_Demo\source</Filter>
     </ClCompile>
     <ClCompile Include="Hangar_Demo\source\tile.c">
